# rustypca

./: .gitignore  BUILD_SUCCESS.md  CLAUDE.md  Cargo.toml  DELIVERABLES.md  DEVELOPMENT.md  FILE_INDEX.md  IMPLEMENTATION_NOTES.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  examples.py  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  wheels.yml
notebooks/: demo.ipynb
ppca/: _ppca.py
ppca-core/: Cargo.toml
ppca-core/src/: lib.rs  ppca.rs
ppca-py/: Cargo.toml  build_extension.py  pyproject.toml
ppca-py/ppca/: __init__.py  _ppca.py
ppca-py/src/: lib.rs
ppca/tests/: test_ppca.py
rustypca/: __init__.py  _rustypca.py
rustypca/src/: lib.rs
rustypca/tests/: test_ppca.py
scripts/: COMPLETION_REPORT.sh  build_and_test.sh  quick_start.sh
src/: bindings.rs  errors.rs  lib.rs  ppca.rs
