# Root configuration for the PPCA monorepo
# Individual packages have their own pyproject.toml files in their directories

[project]
name = "ppca"
version = "0.1.0"
description = "Probabilistic PCA with missing value support using Rust and PyO3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.8",
]
