[package]
name = "ppca-core"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33"
nalgebra-lapack = "0.25"
lapack-src = { version = "0.10", features = ["netlib"] }
blas-src = { version = "0.10", features = ["netlib"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

[[bench]]
name = "ppca_benchmark"
harness = false

[features]
default = []
serde = ["dep:serde"]
