[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[project]
name = "ppca"
version = "0.1.0"
description = "Probabilistic PCA with missing value support using Rust and PyO3"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
]

[tool.maturin]
python-source = "ppca"
module-name = "ppca.ppca_rs"
features = ["pyo3/extension-module"]
